codex-rs/tui/src/snapshots/codex_tui__startup_hooks_review__tests__startup_hooks_review_prompt.snap
---
source: tui/src/startup_hooks_review.rs
expression: "render_lines(&view, 80)"
---

  Hooks need review
  2 hooks are new or changed.
  Hooks can run outside the sandbox after you trust them.

› 1. Review hooks
  2. Trust all and continue
  3. Continue without trusting (hooks won't run)

  ↑/↓ choose · enter confirm · esc back
